--- a/1-guia/ejercicios-1/ej-20-1.tex
+++ b/1-guia/ejercicios-1/ej-20-1.tex
@@ -1,58 +1,58 @@
 %Graficos
 \def\veinte{
-	\begin{tikzpicture}[scale=0.5, baseline=0, >=Latex, draw=Aquamarine]
+  \begin{tikzpicture}[scale=0.7, baseline=0, >=Latex, draw=Aquamarine, transform shape]
 
-		\node[] (1) {$\bullet$};
-		\node[] at (1.west) {$1$};
+    \node[] (1) {$\bullet$};
+    \node[] at (1.west) {$1$};
 
-		\node[above right= of 1] (2) {$\bullet$};
-		\node[] at (2.east) {$2$};
+    \node[above right= of 1] (2) {$\bullet$};
+    \node[] at (2.east) {$2$};
 
-		\node[below right= of 2] (3) {$\bullet$};
-		\node[] at (3.east) {$3$};
+    \node[below right= of 2] (3) {$\bullet$};
+    \node[] at (3.east) {$3$};
 
-		\node[below= of 1] (4) {$\bullet$};
-		\node[] at (4.west) {$4$};
+    \node[below= of 1] (4) {$\bullet$};
+    \node[] at (4.west) {$4$};
 
-		\node[right= of 2] (5) {$\bullet$};
-		\node[] at (5.west) {$5$};
+    \node[right= of 2] (5) {$\bullet$};
+    \node[] at (5.west) {$5$};
 
-		\node[right= of d] (6) {$\bullet$};
-		\node[] at (6.east) {$6$};
+    \node[right= of d] (6) {$\bullet$};
+    \node[] at (6.east) {$6$};
 
+    % Universo
+    \node[shape=ellipse, draw, black, fit={ (1) (2) (3) (4)}] (universo) {};
+    \node[above left = 0.1cm of universo] {$A$};
 
-		% Universo
-		\node[shape=ellipse, draw, black, fit={ (1) (2) (3) (4)}] (universo) {};
-		\node[above left = 0.1cm of universo] {$A$};
+    % Aristas
+    \draw[->, loop below] (1) to (1);
+    \draw[->, loop above ] (3) to (3);
+    \draw[->, loop above] (4) to (4);
+    \draw[->, loop below ] (6) to (6);
 
-		% Aristas
-		\draw[->, loop below] (1) to (1);
-		\draw[->, loop above ] (3) to (3);
-		\draw[->, loop above] (4) to (4);
-		\draw[->, loop below ] (6) to (6);
+    \draw[->, bend left] (6.center) to (4);
+    \draw[->, bend left] (4.center) to (6);
 
-		\draw[->, bend left] (6.center) to (4);
-		\draw[->, bend left] (4.center) to (6);
-
-		\draw[->, bend right] (1.center) to (3);
-		\draw[->, bend right] (3.center) to (1);
-	\end{tikzpicture}
+    \draw[->, bend right] (1.center) to (3);
+    \draw[->, bend right] (3.center) to (1);
+  \end{tikzpicture}
 }
 % fin gráficos
 
-\ejercicio 
+\begin{enunciado}{\ejercicio}
 Sea $A = \set{1, 2, 3, 4, 5, 6}$. Graficar la relación, $\relacion= {(1,1), (1,3), (3,1), (3,3), (6,4), (4,6), (4,4), (6,6)}$
+\end{enunciado}
 
 \begin{minipage}{0.25\textwidth}
-	\veinte
+  \veinte
 \end{minipage}
 \begin{minipage}{0.7\textwidth}
-	\begin{itemize}
-		\item No es reflexiva porque no hay bucles ni en 2 ni en 5.
-		\item Es simétrica, porque hay ida y vuelta en todos los pares de vértices.
-		\item No es antisimétrica, porque $1 \relacion 3$ y $3 \relacion 1$ con $1 \neq 3$.
-		\item Es transitiva. \\
-		      \red{Chequear. Caso particula donde no hay ternas de $x,y,z$ distintos}.
-		      \blue{Sí, el que $2$ esté ahí solo ni cumple la hipótesis de transitividad.}
-	\end{itemize}
+  \begin{itemize}
+    \item No es reflexiva porque no hay bucles ni en 2 ni en 5.
+    \item Es simétrica, porque hay ida y vuelta en todos los pares de vértices.
+    \item No es antisimétrica, porque $1 \relacion 3$ y $3 \relacion 1$ con $1 \neq 3$.
+    \item Es transitiva. \\
+          \red{Chequear. Caso particula donde no hay ternas de $x,y,z$ distintos}.
+          \blue{Sí, el que $2$ esté ahí solo ni cumple la hipótesis de transitividad.}
+  \end{itemize}
 \end{minipage}
