Fix 26-1 y otras cositas

--- a/1-guia/ejercicios-1/ej-26-1.tex
+++ b/1-guia/ejercicios-1/ej-26-1.tex
@@ -79,6 +79,8 @@
         $$
         La clase $\clase{A}$:
         $$
-          \clase{A} = \set{X \en P \big/ \set{1,2,3} \subseteq X } = \set{1,2,3} \union \partes\set{4,5,6,7,8,9,10} \Tilde
+          \clase{A} = \set{X \en P \big/ \set{1,2,3} \subseteq X } 
+          \text{ o también }
+          \clase{A} = \set{ \set{1,2,3} \union X \text{ con } X \en \partes\set{4,5,6,7,8,9,10} }\Tilde
         $$
 \end{enumerate}
