--- a/1-guia/ejercicios-1/ej-30-1.tex
+++ b/1-guia/ejercicios-1/ej-30-1.tex
@@ -13,20 +13,22 @@
 
   \item $f: \naturales \to \naturales,\quad
           f(n) = \llave{ll}{
-            \frac{n}{2} & \text{si $n$ es par}\\
-            n + 1 & \text{si $n$ es impar}\\
-          }$\\
+            \frac{n}{2} & \text{si $n$ es par}   \\
+            n + 1       & \text{si $n$ es impar} \\
+          }$\par
+
         Es \textit{inyectiva} y \textit{sobreyectiva}. $\paratodo m,m' \en \naturales,
           \llave{l}{
-            f(2m) = \frac{2m}{2} = m \\
+            f(2m) = \frac{2m}{2} = m     \\
             f(2m'-1) = 2m' - 1 + 1 = 2m' \\
           } \to$ Si bien $f(8) = f(3)$ la función es \textit{sobreyectiva} porque
-        genera todo $\naturales$ tan solo con la parte par de la función.\\
+        genera todo $\naturales$ tan solo con la parte par de la función.\par
+
         $f^{-1}(n) =
           \llave{ll}{
-            2n    & \text{si $n$ es par}\\
-            n - 1 & \text{si $n$ es impar} \\
-          }$\\
+            2n    & \text{si $n$ es par}   \\
+            n - 1 & \text{si $n$ es impar}
+          }$\par
         \red{Qué onda?}
 
 \end{enumerate}
