--- a/1-guia/teoria-1/teoria-1.tex
+++ b/1-guia/teoria-1/teoria-1.tex
@@ -107,7 +107,19 @@
         Cuando para probar $p \entonces q$ se prueba en su lugar $p \land \neg q$ para llegar así
         a una contradicción, se dice que es una demostración por reducción al absurdo.
 
-  \item \hypertarget{teoria-1:relaciones}{\textit{Relaciones $\relacion$:}}
+  \item \hypertarget{teoria-1:relaciones}{\textit{Relaciones $\relacion$:}}\par
+        \begin{itemize}[label=\tiny\faIcon{yin-yang}]
+          \item
+                \textit{Definición de relación: }\par
+                Sean $A$ y $B$ conjuntos. Una relación $\relacion$ de $A$ en $B$ es un suconjunto
+                cualquiera $\relacion$ del producto cartesiano $A \times B$. Es decir $\relacion$ es una relación
+                de $A$ en $B$ si $\relacion \en \partes(A \times B)$.
+          \item
+                \textit{Definición de relación en un conjunto: }\par
+                Sea $A$ un conjunto. Se dice que $\relacion$ en $A$ cuando $\relacion \subseteq A \times A$.
+        \end{itemize}
+
+  \item \hypertarget{teoria-1:prop-relaciones}{\textit{Propiedades destacables de una $\relacion$:}}\par
         \begin{enumerate}[label=\tiny\faIcon{poop}]
           \item  \textit{Reflexiva}: $(x, x) \en \relacion \paratodo x \en A$ o $x \relacion x.\, \paratodo x \en A$. Gráficamente,
                 cada elemento tiene que tener un bucle.
@@ -163,5 +175,47 @@
         \begin{itemize}[label=\tiny\faIcon{poo}]
           \item \textit{Relación de equivalencia}: La relación debe ser reflexiva, simétrica y transitiva.
           \item \textit{Relación de orden}: La relación debe ser reflexiva, antisimétrica y transitiva.
+        \end{itemize}
+
+  \item \hypertarget{teoria-1:funciones}{\textit{Funciones $f$:}}
+
+        \begin{itemize}[label=\tiny\faIcon{poo}]
+          \item
+                Sean $A$ y  $B$ conjuntos, y sea $\relacion$ de $A$ en $B$. Se dice que
+                $\relacion$ es una \textit{función} cuando todo elemento $x \en A$ está relacionado con algún
+                $y \en B$, y este elemento $y$ es único. Es decir:
+                $$\begin{array}{l}
+                    \paratodo x \en A, \existe!\, y \en B \talque x \relacion y \\
+                    \paratodo x \en A, \existe\, y \en B \talque x\relacion y,
+                  \end{array}
+                $$
+                si  $y, z \en B \text{ son tales que } x \relacion y \ytext x \relacion z \entonces y = z$.
+
+                \begin{itemize}[label=\tiny\faIcon{poop}]
+                  \item Dada una función $f:\, A\,(dominio) \to B\,(codominio)$
+                        el conjunto \textit{imagen} es:
+                        $$
+                          \im(f)= \set{y \en B : \existe x \en A \talque f(x) = y}
+                        $$
+
+                  \item \textit{Propiedades destacables de una $f$:}
+                        \begin{itemize}[label=\tiny\faIcon{spider}]
+                          \item \textit{inyectiva:} si $\forall x, x' \en A \text{ tales que } f(x) = f(x')$ se tiene que $ x = x'$
+                          \item \textit{sobreyectiva:} si $\forall y \en B, \existe x \en A \text{ tal que } f(x) = y.\: f\text{ es sobreyectiva si } \im(f) = B$
+                          \item \textit{biyectiva:} Cuando es \textit{inyectiva} y \textit{sobreyectiva}.
+                        \end{itemize}
+
+                  \item \textit{Composición de funciones:}\par
+                        $A, B, C$ conjuntos y $f: A \to B \to C,\, g: B \to C$ funciones. Entonces la \textit{composición} de $f$ con $g$, que se nota:
+                        $$
+                          g \comp f = g(f(x)),\, \paratodo x \en A,
+                        $$
+                        resulta ser una función $g \comp f$ de $A$ en $C$.
+
+                  \item $f$ es biyectiva cuando $f\inv : B \to A$ es la función que satisface que:\par
+                        $$
+                          \paratodo y \en B: f\inv(y) = x \sisolosi f(x) = y
+                        $$
+                \end{itemize}
         \end{itemize}
 \end{itemize}
