Fix teoria 2 y algunos ejercicios

--- a/1-guia/ejercicios-1/ej-29-1.tex
+++ b/1-guia/ejercicios-1/ej-29-1.tex
@@ -1,4 +1,6 @@
+\separador
 \underline{\textit{Funciones}}\par
+
 \begin{enunciado}{\ejercicio}
   Determinar si $\relacion$ es una función de $A$ en $B$ en los casos
 \end{enunciado}
