--- a/2-guia/ejercicios-2/ej-16-2.tex
+++ b/2-guia/ejercicios-2/ej-16-2.tex
@@ -1,5 +1,4 @@
-\ejercicio
+\begin{enunciado}{\ejercicio}
 Hallar la fórmula para el término general de las sucesiones $(a_n)_{n \en \naturales}$
-
-\separadorCorto
+\end{enunciado}
 \hacer
