add disclaimer algunos cambio menores

--- a/1-guia/teoria-1/teoria-1.tex
+++ b/1-guia/teoria-1/teoria-1.tex
@@ -1,4 +1,4 @@
-\hypertarget{teoria-1:basicos-conjuntos}\textit{Básicos sobre conjuntos y coso: }
+\textit{\hypertarget{teoria-1:basicos-conjuntos}{Básicos sobre conjuntos y coso: }}
 \begin{itemize}[label={\tiny\faIcon{smile}}]
   \item \textit{ Las uniones e intersecciones de conjuntos conmutan:}
         $$
