--- a/5-guia/teoria-5/teoria-5.tex
+++ b/5-guia/teoria-5/teoria-5.tex
@@ -54,7 +54,7 @@
         \underline{la vas a cagar}. Yo te avisé \faIcon{hands-wash}.
 \end{itemize}\bigskip
 
-\textit{Sistemas de ecuaciones de congruencia: Teorema chino del resto}
+\textit{Sistemas de ecuaciones de congruencia: \href{\superIdol}{Teorema chino del resto}}
 \begin{itemize}
   \item
         Sean $m_1,\dots m_n \en \enteros$ \underline{\red{coprimos dos a dos}}, es decir que $\paratodo i \distinto j$, se tiene $m_i \cop m_j$,
