--- a/macros/definiciones.tex
+++ b/macros/definiciones.tex
@@ -292,3 +292,9 @@
     \par
   \end{minipage}\par
 }
+
+%%% (☞⌐▀͡ ͜ʖ͡▀ )☞ Yo mama
+\def\superIdol{https://www.youtube.com/watch?v=DKpaKHUlyBY}
+\def\videosTeresa{https://www.youtube.com/@AlgebraIC-gu7oc/videos}
+\def\justDoIt{https://www.youtube.com/watch?v=ZXsQAXx_ao0}
+\def\dontWorryAboutAThing{https://www.youtube.com/watch?v=4k2PJFPu57Y}
