--- a/macros/estructura-ejercicios.tex
+++ b/macros/estructura-ejercicios.tex
@@ -1,4 +1,12 @@
 %=========================
+%  Disclaimer
+%=========================
+
+\input{../macros/disclaimer.tex}
+
+\newpage
+
+%=========================
 % Un poco de teoría
 %=========================
 \subsubsection*{\hypertarget{teoria-\guia}{Notas teóricas:}}
