--- a/macros/preamble-general.tex
+++ b/macros/preamble-general.tex
@@ -28,7 +28,7 @@
 \usepackage{polynom} % para división de polinomios y mcd
 \usepackage{fontawesome5} % fuentes "extras"
 \usepackage{venndiagram} % Para los diagramas de Venn
-\usepackage{listings} % Escribir código
+%\usepackage{listings} % Escribir código
 
 %\usepackage{algorithm}
 %\usepackage{algpseudocode}
