--- a/2-guia/ejercicios-2-extra/ej-extra-1-2.tex
+++ b/2-guia/ejercicios-2-extra/ej-extra-1-2.tex
@@ -49,6 +49,6 @@ $$
 	}
 $$
 $\llamada1$ se prueba fácil en 2 cuentas, queda como ejercicio para vos
-\href{https://github.com/nad-garraz/algebraUno}{\Large\faIcon{hands-wash}}.
+\href{\dirRepo}{\Large\faIcon{hands-wash}}.
 Es así que $p(1), p(k), \ytext p(k+1)$ resultaron verdaderas y por el principio de inducción
 $p(n)$ también lo será $\paratodo n \en \naturales$.
