--- a/macros/encabezado-pie.tex
+++ b/macros/encabezado-pie.tex
@@ -17,12 +17,12 @@
 \fancyhead[R]{Página \thepage} %% encabezado derecho
 
 \fancyfoot[EL]{
-	\href{https://github.com/nad-garraz/algebraUno}{\small \faIcon{github}
+	\href{\dirRepo}{\small \faIcon{github}
 		¡Aportá! Correcciones, subiendo ejercicios,
 		\yellow{\FiveStar} al repo, críticas, todo sirve.}
 }    % pie izquierdo pares
 \fancyfoot[OL]{
-	\href{https://t.me/+1znt2GV1i8cwMTNh}{\small\faIcon{telegram} ¿Errores? Mandá tu solución,
+        \href{\dirTelegram}{\small\faIcon{telegram} ¿Errores? Mandá tu solución,
 		\textit{\underline{entendible y coqueta}}, así corregimos.
 	}
 } % pie izquierdo impares
