--- a/macros/preamble-general.tex
+++ b/macros/preamble-general.tex
@@ -57,3 +57,7 @@
 \urlstyle{same}
 
 \setlength{\parindent}{0pt} % Para que no haya indentación en las nuevas líneas.
+
+%% Info SOCIAL
+\def\dirRepo{https://github.com/nad-garraz/algebraUno}
+\def\dirTelegram{https://t.me/+1znt2GV1i8cwMTNh}
