add qr. General update

--- a/macros/estructura-ejercicios.tex
+++ b/macros/estructura-ejercicios.tex
@@ -1,10 +1,15 @@
 %=========================
-%  Disclaimer
+%  Disclaimer y QR
 %=========================
 
 \input{../macros/disclaimer.tex}
 
 \newpage
+
+\input{../macros/qr.tex}
+
+\newpage
+
 
 %=========================
 % Un poco de teoría
