--- a/macros/preamble-general.tex
+++ b/macros/preamble-general.tex
@@ -28,6 +28,7 @@
 \usepackage{polynom} % para división de polinomios y mcd
 \usepackage{fontawesome5} % fuentes "extras"
 \usepackage{venndiagram} % Para los diagramas de Venn
+\usepackage{qrcode} % genera código qr
 %\usepackage{listings} % Escribir código
 
 %\usepackage{algorithm}
@@ -61,3 +62,4 @@
 %% Info SOCIAL
 \def\dirRepo{https://github.com/nad-garraz/algebraUno}
 \def\dirTelegram{https://t.me/+1znt2GV1i8cwMTNh}
+\newcommand{\dirGuia}[1]{\dirRepo/blob/main/#1-guia/#1-sol.pdf}
