--- a/1-guia/ejercicios-1-extra/ej-extra-4-1.tex
+++ b/1-guia/ejercicios-1-extra/ej-extra-4-1.tex
@@ -25,7 +25,7 @@
                 $$
                   \llave{l}{
                     \magenta{n^2 + 4m^2 + m - 6n} \taa{}{\red{!}}{\conga5}
-                    \congruencia{n^2 - m^2 + m - n}{0}{5 }\Tilde\\
+                    \congruencia{n^2 - m^2 + m - n}{0}{5 }\Tilde \\
                     \magenta{n^2 + 4m^2 + m - 6n} \conga2 n^2 + m \taa{}{\red{!!}}{\conga2}
                     \congruencia{n+m}{0}{2} \sii \congruencia{n}{m}{2} \Tilde
                   }
@@ -70,8 +70,8 @@
         $$
           n \relacion m \sisolosi
           \llave{l}{
-            \congruencia{n^2 -m^2 + m -n}{0}{5}\\
-            \ytext \\
+            \congruencia{n^2 -m^2 + m -n}{0}{5} \\
+            \ytext                              \\
             \congruencia{n}{m}{2}.
           }
         $$
@@ -82,8 +82,8 @@
 
         \textit{Reflexiva: } Si $ n \relacion n \sisolosi
           \llave{l}{
-            \congruencia{n^2 -n^2 + n -n = 0}{0}{5} \Tilde\\
-            \ytext \\
+            \congruencia{n^2 -n^2 + n -n = 0}{0}{5} \Tilde \\
+            \ytext                                         \\
             \congruencia{n}{n}{2} \Tilde.
           }
         $
@@ -97,8 +97,8 @@
           \llave{l}{
             \congruencia{n^2 -m^2 + m -n}{0}{5}
             \Entonces{$m \relacion n$}
-            \congruencia{m^2 -n^2 + n - m = -(n^2 -m^2 + m -n)}{0}{5} \Tilde\\
-            \ytext \\
+            \congruencia{m^2 -n^2 + n - m = -(n^2 -m^2 + m -n)}{0}{5} \Tilde \\
+            \ytext                                                           \\
             \congruencia{n}{m}{2}
             \Entonces{$m \relacion n$}
             \congruencia{m}{n}{2}\Tilde
@@ -112,15 +112,15 @@
         Si
         $$n \relacion m \sii
           \llave{l}{
-            \congruencia{n^2 -m^2 + m -n}{0}{5}\\
-            \ytext \\
+            \congruencia{n^2 -m^2 + m -n}{0}{5} \\
+            \ytext                              \\
             \congruencia{n}{m}{2}
           }
           \ytext
           m \relacion j \sii
           \llave{l}{
-            \congruencia{m^2 -j^2 + j -m}{0}{5} \llamada1\\
-            \ytext \\
+            \congruencia{m^2 -j^2 + j -m}{0}{5} \llamada1 \\
+            \ytext                                        \\
             \congruencia{m}{j}{2} \llamada2
           }
         $$
@@ -131,12 +131,12 @@
           \left.
           \begin{array}{c}
             \congruencia{n^2 \magenta{- m^2 + m} - n}{0}{5}
-            \Sii{\llamada1}[\red{!}]
+            \Sii{$\llamada1$}[\red{!}]
             \congruencia{n^2 \magenta{- j^2 + j} - n}{0}{5}
             \\
             \ytext \\
             \congruencia{n}{m}{2}
-            \Sii{\llamada2}
+            \Sii{$\llamada2$}
             \congruencia{n}{j}{2}
           \end{array}
           \right\}
