--- a/1-guia/ejercicios-1/ej-4-1.tex
+++ b/1-guia/ejercicios-1/ej-4-1.tex
@@ -20,7 +20,7 @@
 
   \item $A \inter B = \set{1} \ytext (A \inter C)  = \set{-2,3}$
         $$
-          (A \inter B) \triangle (A \inter C) = \vacio
+                (A \inter B) \triangle (A \inter C) = \set{-2,1 ,3}
         $$
 
   \item $A^c = \set{10, \set{1,2,3},\set{3}}, \quad B^c = \set{-2, 7, 3, \set{1,2,3}} \ytext C^c = \set{1,\set{3}, 7, 10}$
