--- a/macros/disclaimer.tex
+++ b/macros/disclaimer.tex
@@ -1,45 +1,52 @@
-\underline{Disclaimer:}
-Esto va a dirigido para aquél que esté listo para escucharlo, más bien leerlo.\par \Bigskip
-
-
+\thispagestyle{empty}
+\underline{Disclaimer:}\par
+Dirigido para aquél que esté listo para leerlo, o no tanto. Va con onda.\par \Bigskip
 
 \vspace*{\fill}
 \noindent\makebox[\textwidth]{
-	\begin{minipage}{0.7\textwidth}
-		\centering
-		{\Large \red{¡Si usás este apunte vas a reprobar!}}\par\bigskip
+  \begin{minipage}{0.7\textwidth}
+    \centering
+    {\Large \red{¡Si usás este apunte vas a reprobar!}}\par\bigskip
 
-		\textit{Not really}, depende de como lo uses. Ya sabés como se usa \magenta{esto \faIcon{toilet-paper}}.
-		Depende de vos lo que hagas con él. Si estás trabado antes de ver lo que hizo otra persona:
+    \textit{Not really.} Dependerá de como lo uses, puede ser un arma de doble filo. Ya sabés como se usa \magenta{esto \faIcon{toilet-paper}}.
+    Depende de vos lo que hagas con él.\par Si estás trabado, antes de ver la solución que hizo otra persona:
 
-		\begin{itemize}[label=\purple{\faIcon{toilet-paper}}]
+    \begin{itemize}[label=\purple{\faIcon{toilet-paper}}]
 
-			\item No mires la solución inmediatamente, porque te \textit{condicionas pavlovianamente}.
+            \item Mirar la solución ni bien te trabás, te \textit{condicionas pavlovianamente} a \textbf{no} pensar.
+                    Necesitás darle tiempo al cerebro para llegar a la solución.
 
-			\item Intentá un ejercicio similar, pero \textbf{más fácil}.
+      \item Intentá un ejercicio similar, pero \textbf{más fácil}.
 
-			\item No sale el fácil, intentá uno \textbf{aún más fácil}.
+      \item ¿No sale el fácil? Intentá uno \textbf{\large aún más fácil}.
 
-			\item Repasar las teóricas. \href{\videosTeresa}{Ver videos de Teresa \faIcon{youtube}}.
 
-			\item Ver algún ejercicio similar hecho en clase.
+      \item Fijate si tenés un ejercicio similar hecho en clase. Y mirá ese, así no quemás el ejercicio de la guía.
 
-			\item Tomate 2 minutos para formular una pregunta que realmente
-			      sea lo que \textbf{no} entendés. Decir \textit{no me sale} $\noexiste$ más. Y si encima escribís esa pregunta, vas a dormir mejor.
-		\end{itemize}
+      \item Tomate 2 minutos para formular una pregunta que realmente
+            sea lo que \textbf{no} entendés. Decir \textit{`no me sale'} $\noexiste +$. Escribí
+                    esa pregunta, vas a dormir mejor. 
+    \end{itemize}\par \medskip
 
-		\textit{Si no te salen los ejercicios fáciles} de un tema en particular, no te van a salir los ejercicios
-		más difíciles: Sentido común. Pero los más fáciles van a salir y eso te va a dar un \textit{confidence boost}.\par
+    Ahora sí mirá la solución.\par \medskip
 
-		Si hacés miles de parciales en el afán de tener un ejemplo hecho de todas las
-		variantes, estás apelando demasiado a la suerte. Un poco de originalidad de los profes y te la ponen.\par
+    \textit{Si no te salen los ejercicios fáciles} de un tema en particular, no te van a salir los ejercicios
+    más difíciles: \cyan{Sentido común}.\par\medskip
 
-		\href{\videosTeresa}{Los videos de Teresa son buenísimos \faIcon{youtube}}.\par
+    ¡Los más fáciles van a salir! Son el alimento de nuestra confiaza.\par\medskip
 
-		Los ejercicios que se dan en clase suelen ser similares a los parciales,
-		a veces más difíciles, repasalos siempre \href{\justDoIt}{Just Do IT \faIcon{jedi}\faIcon{hand-sparkles}\faIcon{jedi}!}
-	\end{minipage}
+    Si mirás miles de soluciones a parciales en el afán de tener un ejemplo hecho de todas las
+    variantes, estás apelando demasiado a la suerte de que te toque uno igual, \textit{pero no estás aprendiendo nada}.
+    Hacer un parcial bien lleva entre 3 y 4 horas. Así que si vos en 4 horas "hiciste" 3 o 4 parciales, \textit{algo raro debe haber}.
+    A los parciales se va a \textbf{pensar} y eso hay que practicarlo desde el primer día.\par\medskip
+
+          Mirá los videos de las teóricas \href{\videosTeresa}{de Teresa que son buenísimos \faIcon{youtube}}.\par\medskip
+
+    Los ejercicios que se dan en clase suelen ser similares a los parciales,
+    a veces más difíciles, repasalos siempre \href{\justDoIt}{Just Do IT \faIcon{jedi}\faIcon{hand-sparkles}\faIcon{jedi}!}
+  \end{minipage}
 }
 \vspace*{\fill}
 
-Eh, loco, fatalista, distópico, \href{\dontWorryAboutAThing}{relajá un toque te vas a quedar (más) pelado... \faIcon{dove}\faIcon{dove}\faIcon{dove}}
+Eh, loco, fatalista, distópico, \href{\dontWorryAboutAThing}{relajá un toque te vas a\
+  quedar (más) pelado... \faIcon{dove}\faIcon{dove}\faIcon{dove} \textit{va a salir todo bien!}}
