--- a/1-guia/ejercicios-1/ej-4-1.tex
+++ b/1-guia/ejercicios-1/ej-4-1.tex
@@ -13,7 +13,7 @@
 \end{enunciado}
 
 \begin{enumerate}[label=\alph*)]
-  \item $B \triangle C = \set{ -2, 1, 3, \set{1,2,3}, \set{3}}$
+  \item $B \triangle C = \set{ -2, 1, 3, 10, \set{1,2,3}, \set{3}}$
         $$
           A \inter (B \triangle C) = \set{-2,1,3}
         $$
