add link videos practicas pandemia

--- a/5-guia/ejercicios-5-extra/ej-extra-3-5.tex
+++ b/5-guia/ejercicios-5-extra/ej-extra-3-5.tex
@@ -105,7 +105,7 @@ $$
 		\llamada1\congruencia{n}{0}{7}\\
 		\llamada2\congruencia{n}{10}{19}
 	}
-    \flecha{$7 \cop 19$ hay solución por}[THC \faIcon{cannabis}, digo TCHR]
+    \flecha{$7 \cop 19$ hay solución por}[\href{\chinito}{T chino R}]
 	\llave{l}{
 		\flecha{$\llamada2$}[en $\llamada1$]
 		n = 7 (19k + 10)= 133k + 70
