--- a/5-guia/ejercicios-5/ej-10-5.tex
+++ b/5-guia/ejercicios-5/ej-10-5.tex
@@ -25,7 +25,7 @@
 		      \flecha{actualizo}[$a$]
 		      a = 70 \ub{(9j)}{q} + 23 = 680j + 23 \to \boxed{\congruencia{a}{23}{630}} \Tilde
 	      $\\
-	      La solución hallada es la que el Teorema chino del Resto me garantiza que tengo en el
+                La solución hallada es la que el Teorema \href{\chinito}{chino} del Resto me garantiza que tengo en el
 	      intervalo $[0, 10\cdot 7 \cdot 9)$
 
 	\item
