--- a/6-guia/ejercicios-6-extra/ej-extra-3-6.tex
+++ b/6-guia/ejercicios-6-extra/ej-extra-3-6.tex
@@ -56,7 +56,7 @@ $
 $\par
 
 $
-  \flecha{junto info}[T\faIcon{cannabis}R]
+  \flecha{junto info}[\href{\chinito}{T\faIcon{cannabis}R}]
   \llave{l}{
   \congruencia{n}{9}{12} \\
   \congruencia{n}{5}{8}
@@ -77,7 +77,7 @@ $
 \par
 
 Ahora sí, tengo el sistema con \red{\textit{divisores coprimos}},
-por TCHR tengo solución.\par
+por \href{\chinito}{TCHR} tengo solución.\par
 
 $
   \flecha{de}[$\llamada1$]
