--- a/macros/definiciones.tex
+++ b/macros/definiciones.tex
@@ -296,5 +296,7 @@
 %%% (☞⌐▀͡ ͜ʖ͡▀ )☞ Yo mama
 \def\superIdol{https://www.youtube.com/watch?v=DKpaKHUlyBY}
 \def\videosTeresa{https://www.youtube.com/@AlgebraIC-gu7oc/videos}
+\def\videosPracticas{https://www.youtube.com/playlist?list=PLEtdiZTXB5c5e9BOcqbnROTHevanNfz6U}
 \def\justDoIt{https://www.youtube.com/watch?v=ZXsQAXx_ao0}
 \def\dontWorryAboutAThing{https://www.youtube.com/watch?v=4k2PJFPu57Y}
+\def\chinito{https://www.youtube.com/watch?v=ebz4xuPf-is}
