--- a/macros/disclaimer.tex
+++ b/macros/disclaimer.tex
@@ -38,9 +38,10 @@ Dirigido para aquél que esté listo para leerlo, o no tanto. Va con onda.\par \
     Si mirás miles de soluciones a parciales en el afán de tener un ejemplo hecho de todas las
     variantes, estás apelando demasiado a la suerte de que te toque uno igual, \textit{pero no estás aprendiendo nada}.
     Hacer un parcial bien lleva entre 3 y 4 horas. Así que si vos en 4 horas "hiciste" 3 o 4 parciales, \textit{algo raro debe haber}.
-    A los parciales se va a \textbf{pensar} y eso hay que practicarlo desde el primer día.\par\medskip
+    A los parciales se va a \textbf{pensar} y eso hay que practicarlo desde el primer día.\par\bigskip
 
           Mirá los videos de las teóricas \href{\videosTeresa}{de Teresa que son buenísimos \faIcon{youtube}}.\par\medskip
+          Videos de prácticas de pandemia, complemento extra: \href{\videosPracticas}{Prácticas Pandemia \faIcon{youtube}}.\par\bigskip
 
     Los ejercicios que se dan en clase suelen ser similares a los parciales,
     a veces más difíciles, repasalos siempre \href{\justDoIt}{Just Do IT \faIcon{jedi}\faIcon{hand-sparkles}\faIcon{jedi}!}
