Agrego Comando para aportes Y vamos probando

--- a/1-guia/ejercicios-1/ej-1-1.tex
+++ b/1-guia/ejercicios-1/ej-1-1.tex
@@ -23,3 +23,8 @@ $A = \set{1,2,3}$
     \item $\set{2} \en A \flecha{respuesta} \text{F}$
   \end{enumerate}
 \end{multicols}
+
+% Contribuciones
+\begin{aportes}
+  \item \aporte{\href{https://github.com/nad-garraz}{\faIcon{github}}}{Nad Garraz}
+\end{aportes}
