Aportes mode on

--- a/1-guia/ejercicios-1/ej-1-1.tex
+++ b/1-guia/ejercicios-1/ej-1-1.tex
@@ -26,5 +26,6 @@ $A = \set{1,2,3}$
 
 % Contribuciones
 \begin{aportes}
-  \item \aporte{\href{https://github.com/nad-garraz}{\faIcon{github}}}{Nad Garraz}
+  %\aporte{url}{nombre icono}
+  \item \aporte{https://github.com/nad-garraz}{Nad Garraz \faIcon{github}}
 \end{aportes}
