--- a/1-guia/ejercicios-1/ej-9-1.tex
+++ b/1-guia/ejercicios-1/ej-9-1.tex
@@ -1,27 +1,63 @@
-\ejercicio
-Sean $A$ y $B$ conjuntos, Probar que $\partes(A) \subseteq \partes(B) \sisolosi A \subseteq B$
-\begin{itemize}
-	\item[$\entonces$)] Pruebo por absurdo. Supongo que $A \nsubseteq B \entonces \exists x \en A \talque x \notin B$.\\
-	      Si $x \en A
-          \entonces
-          \set{x} \en \partes(A)
-		      \flecha{hipótesis}[$\partes(A) \subseteq \partes(B)$]
-              \set{x} \en \partes(B)
-		      \entonces
-              x \en B .$ Absurdo $\skull$.\\
-	      $\to \boxed{\partes(A) \subseteq \partes(B) \entonces A \subseteq B}$\Tilde
+\begin{enunciado}{\ejercicio}
+  Sean $A$ y $B$ conjuntos, Probar que $\partes(A) \subseteq \partes(B) \sisolosi A \subseteq B$
+\end{enunciado}
 
-	\item[$\Leftarrow$)]
-	      $\qvq A \subseteq B
+Prueba que la hago por absurdo, \hyperlink{teoria-1:absurdo}{mirá la lógica en en apunte.}
+\begin{itemize}
+  \item[$\magenta{\entonces}$)] Quiero probar que:
+        $$
+          \ub{\partes(A) \subseteq \partes(B)}{\purple{\text{hipótesis}}}  \magenta{\entonces} \ub{A \subseteq B}{\text{tesis}}
+        $$
+        Pruebo por absurdo. \underline{Niego} la tesis, la \purple{hipótesis} sigue valiendo.\par
+
+        Supongo que:
+        $$
+          A \nsubseteq B \Sii{def}[\red{!}] \existe x \en A \text{ tal que } x \taa{\llamada1}{}\notin B.
+        $$
+        Y lo que intento es llegar a una \red{contradicción}, es decir me gustaría que pase algo que \red{contradiga}
+        la \purple{hipótesis}.\par
+        Según mi supuesto:
+        $$
+          x \en A
+          \Entonces{def de}[partes]
+          \set{x} \en \partes(A).
+        $$
+        Peeeeeero\red{!!} por \purple{hipótesis}:
+        $$
+          \partes(A) \subseteq \partes(B)
+        $$
+
+        Entonces el conjunto $\set{x}$ también tiene que estar en $\partes(B)$.\par
+
+        \textit{Nota que puede ser útil:}\par
+        ¿Cuál es el absurdo? Terminá lo que falta de esta parte de la demostración sin ver como sigue y después comparás.
+        Ya está casi terminado, pero juntar los cables con esta info te obliga a entender lo que se está intentando hacer.
+        \textit{Fin nota que puede ser útil:}\par
+
+        Si el conjunto de un elemento $\set{x}$ está en $\partes(B)$ entonces por la definición
+        del conjunto de partes el elemento $x$ tiene que estar en $B$.\par
+        Y esto es un absurdo, porque arranqué diciendo en $\llamada1$ que $x \notin B$ y ahora digo que $x \en B$. Absurdo $\skull$.\par
+        Como mi supuesto resulto falso, debido a la lógica que está en las \hyperlink{teoria-1:absurdo}{notas teóricas sobre mostrar por absurdo} concluyo que:
+        $$
+          \boxed{\partes(A) \subseteq \partes(B) \entonces A \subseteq B}\Tilde
+        $$
+
+  \item[$\magenta{\Leftarrow}$)]
+        $\qvq A \subseteq B
           \entonces
           \partes(A) \subseteq \partes(B),\\
-		      \paratodo S \en \partes(A)
-              \sisolosi
-              S \subseteq A
-              \stacktext{hip}\subseteq B
-              \entonces
-              S \en \partes(B).\\
-		      \to
-              \boxed{A \subseteq B \entonces \partes(A) \subseteq \partes(B) }$ \Tilde
+          \paratodo S \en \partes(A)
+          \sisolosi
+          S \subseteq A
+          \stacktext{hip}\subseteq B
+          \entonces
+          S \en \partes(B).\\
+          \to
+          \boxed{A \subseteq B \entonces \partes(A) \subseteq \partes(B) }$ \Tilde
 \end{itemize}
 
+% Contribuciones
+\begin{aportes}
+  %\aporte{url}{nombre icono}
+  \item \aporte{https://github.com/nad-garraz}{Nad Garraz \faIcon{github}}
+\end{aportes}
