--- a/1-guia/teoria-1/teoria-1.tex
+++ b/1-guia/teoria-1/teoria-1.tex
@@ -101,10 +101,13 @@
           \end{array}
         \]
 
+        \hypertarget{teoria-1:contrareciproco}{\textit{Probar por contrarrecíproco:}}
         Cuando para probar $p \entonces q$ se prueba en su lugar $\neg q \entonces \neg p$ se dice que es
         una \textit{demostración
           por contrarrecíproco}.\par
-        Cuando para probar $p \entonces q$ se prueba en su lugar $p \land \neg q$ para llegar así
+
+        \hypertarget{teoria-1:absurdo}{\textit{Probar por absurdo:}
+        Probar}Cuando para probar $p \entonces q$ se prueba en su lugar $p \land \neg q$ para llegar así
         a una contradicción, se dice que es una demostración por reducción al absurdo.
 
   \item \hypertarget{teoria-1:relaciones}{\textit{Relaciones $\relacion$:}}\par
